================================================================================
SVN $Id: ChangeLog 45058 2013-03-20 16:12:21Z jedwards $
SVN $URL: https://parallelio.googlecode.com/svn/trunk $
================================================================================
This file describes what tags were created and why
===========================
Originator: jedwards
Date: Feb 20, 2014
Model: pio
Version: pio1_8_10
One-line : add gptl timing library support 

M              924   pio/CMakeLists.txt
M              924   testpio/CMakeLists.txt
M              924   timing/CMakeLists.txt
M              924   unittests/driver.F90
M              924   unittests/CMakeLists.txt

===========================
Originator: jedwards
Date: Feb 12, 2014
Model: pio
Version: pio1_8_9
One-line : bug fix in darray_write_complete

M    piodarray.F90.in
M    pio_types.F90

===========================
Originator: jedwards
Date: Jan 24, 2014
Model: pio
Version: pio1_8_8
One-line : Fix some issues with netcdf4c

M              924   pionfatt_mod.F90.in
M              924   piodarray.F90.in
M              924   pionfget_mod.F90.in
M              924   pionfread_mod.F90.in



===========================
Originator: jedwards
Date: Jan 16, 2014
Model: pio
Version: pio1_8_7
One-line  Fix issues with BGQ topology, fix minor memleaks

M   topology.c
M   piolib_mod.F90


===========================
Originator: jedwards
Date: Dec 11, 2013
Model: pio
Version: pio1_8_6
One-line summary: further build updates



===========================
Originator: jedwards
Date: Dec 06, 2013
Model: pio
Version: pio1_8_5
One-line summary: Get cmake utilities from external repository

D pio/cmake
D SVN_EXTERNAL_DIRECTORIES
A pio/SVN_EXTERNAL_DIRECTORIES
 
===========================
Originator: jedwards
Date: Dec 06, 2013
Model: pio
Version: pio1_8_4
One-line summary: added unittests - tested on yellowstone_intel and hopper_pgi - these tests must be run from an
  interative login session

A unittests/
