@@ -140,10 +140,13 @@ ENDIF()
 IF (NOT ${PIO_USE_MPIMOD})
   SET(bld_PIO_DEFINITIONS ${bld_PIO_DEFINITIONS} -DNO_MPIMOD)
 ENDIF()
+OPTION(PIO_BUILD_TIMING  "" OFF)
 
-if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/../timing)
-  SET(bld_PIO_DEFINITIONS ${bld_PIO_DEFINITIONS} -DTIMING -I ${CMAKE_CURRENT_BINARY_DIR}/timing)
-  ADD_SUBDIRECTORY(../timing timing)
+if(${PIO_BUILD_TIMING})
+  if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/../timing)
+    SET(bld_PIO_DEFINITIONS ${bld_PIO_DEFINITIONS} -DTIMING -I ${CMAKE_CURRENT_BINARY_DIR}/timing)
+    ADD_SUBDIRECTORY(../timing timing)
+  endif()
 endif()
 
 SET(PIO_DEFINITIONS ${bld_PIO_DEFINITIONS} CACHE STRING "")
